--- a/dmu32/dmu32_HDF-N/meta_main.yml
+++ b/dmu32/dmu32_HDF-N/meta_main.yml
@@ -16,4 +16,6 @@ photoz: None
 
 cigale: None
 
+cigale_ldust_prediction: None
+
 final: dmu_products/dmu32/dmu32_HDF-N/data/HDF-N_20180427_cigale.fits
