--- a/dmu32/dmu32_SSDF/meta_main.yml
+++ b/dmu32/dmu32_SSDF/meta_main.yml
@@ -16,4 +16,6 @@ photoz: dmu_products/dmu24/dmu24_SSDF/data/master_catalogue_ssdf_20180221_photoz
 
 cigale: None
 
+cigale_ldust_prediction: None
+
 final: dmu_products/dmu32/dmu32_SSDF/data/SSDF_20180221_cigale.fits
