--- a/dmu32/dmu32_COSMOS/meta_main.yml
+++ b/dmu32/dmu32_COSMOS/meta_main.yml
@@ -16,4 +16,6 @@ photoz: dmu_products/dmu24/dmu24_COSMOS/data/COSMOS2015-HELP_selected_20160613_p
 
 cigale: dmu_products/dmu28/dmu28_COSMOS/data/zphot/final_results.fits
 
+cigale_ldust_prediction: dmu_products/dmu28/dmu28_COSMOS/data/COSMOS_Ldust_prediction_results.fits
+
 final: dmu_products/dmu32/dmu32_COSMOS/data/COSMOS_20180516_cigale.fits
