--- a/dmu32/dmu32_SGP/meta_main.yml
+++ b/dmu32/dmu32_SGP/meta_main.yml
@@ -8,12 +8,14 @@ masterlist: dmu_products/dmu1/dmu1_ml_SGP/data/master_catalogue_sgp_20180221.fit
 
 depths: dmu_products/dmu1/dmu1_ml_SGP/data/depths_sgp_20180221.fits
 
-flags: dmu_products/dmu6/dmu6_v_SGP/data/tiles/sgp_20180221_FILENUM_flags.fits.fits
+flags: dmu_products/dmu6/dmu6_v_SGP/data/tiles/sgp_20180221_FILENUM_flags.fits
 
 xid: [ dmu_products/dmu26/dmu26_XID+SPIRE_SGP/data/dmu26_XID+SPIRE_SGP_20180625.fits ]
 
 photoz: dmu_products/dmu24/dmu24_SGP/data/master_catalogue_sgp_20180221_photoz_20180502_r_optimised.fits
 
 cigale: dmu_products/dmu28/dmu28_SGP/data/zphot/HELP_final_results.fits
+
+cigale_ldust_prediction: dmu_products/dmu28/dmu28_SGP/data/hatlas_sgp_Ldust_prediction_results.fits
 
 final: dmu_products/dmu32/dmu32_SGP/data/SGP_20180221_cigale.fits
