--- a/dmu32/dmu32_SPIRE-NEP/meta_main.yml
+++ b/dmu32/dmu32_SPIRE-NEP/meta_main.yml
@@ -16,4 +16,6 @@ photoz: None
 
 cigale: None
 
+cigale_ldust_prediction: None
+
 final: dmu_products/dmu32/dmu32_SPIRE-NEP/data/SPIRE-NEP_20180220_cigale.fits
