--- a/dmu32/dmu32_NGP/meta_main.yml
+++ b/dmu32/dmu32_NGP/meta_main.yml
@@ -10,7 +10,7 @@ depths: dmu_products/dmu1/dmu1_ml_NGP/data/depths_ngp_20180219.fits
 
 flags: dmu_products/dmu6/dmu6_v_NGP/data/ngp_20180219_flags.fits
 
-xid: dmu_products/dmu26/dmu26_XID+SPIRE_NGP/data/dmu26_XID+SPIRE_NGP_20190310.fits
+xid: [ dmu_products/dmu26/dmu26_XID+SPIRE_NGP/data/dmu26_XID+SPIRE_NGP_20190310.fits ]
 
 photoz: dmu_products/dmu24/dmu24_NGP/data/master_catalogue_ngp_20180501_photoz_20180601_r_optimised.fits
 
