--- a/dmu26/dmu26_XID+MIPS_AKARI-SEP/meta_main.yml
+++ b/dmu26/dmu26_XID+MIPS_AKARI-SEP/meta_main.yml
@@ -4,7 +4,7 @@ Version: 1.0
 
 Author: Maria Campos
 
-Fields: AKARI-NEP
+Fields: AKARI-SEP
 
 Selection filter: F_MIPS_24
 
@@ -12,4 +12,4 @@ Rights: N/A
 
 Acknowledgements: N/A
 
-Related products:  *-0.MIPS.help.fits, dmu17_MIPS_AKARI-SEP_20190214sr.fits, master_catalogue_akari-sep_20180221.fits
+Related products:  dmu17_MIPS_AKARI-SEP_20190905.fits, dmu17_MIPS_PSFnorm_AKARI-SEP_Legacy20190905.fits, master_catalogue_akari-sep_20180221.fits
