--- a/dmu32/dmu32_GAMA-09/meta_main.yml
+++ b/dmu32/dmu32_GAMA-09/meta_main.yml
@@ -10,7 +10,8 @@ depths: dmu_products/dmu1/dmu1_ml_GAMA-09/data/depths_gama-09_20180601.fits
 
 flags: dmu_products/dmu6/dmu6_v_GAMA-09/data/gama-09_20171206_flags.fits
 
-xid: [ dmu_products/dmu26/dmu26_XID+SPIRE_GAMA-09/data/dmu26_XID+SPIRE_GAMA-09_20180508.fits ]
+xid: [ dmu_products/dmu26/dmu26_XID+PACS_GAMA-09/data/dmu26_XID+PACS_GAMA-09_cat_20190918.fits,
+       dmu_products/dmu26/dmu26_XID+SPIRE_GAMA-09/data/dmu26_XID+SPIRE_GAMA-09_20180508.fits ]
 
 photoz: dmu_products/dmu24/dmu24_GAMA-09/data/master_catalogue_gama-09_20171206_photoz_20180213_r_optimised.fits
 
