--- a/dmu32/dmu32_xFLS/meta_main.yml
+++ b/dmu32/dmu32_xFLS/meta_main.yml
@@ -10,7 +10,8 @@ depths: dmu_products/dmu1/dmu1_ml_xFLS/data/depths_xfls_20180501.fits
 
 flags: dmu_products/dmu6/dmu6_v_xFLS/data/xfls_20180501_flags.fits
 
-xid: None
+xid: [ dmu_products/dmu26/dmu26_XID+MIPS_xFLS/data/dmu26_XID+MIPS_xFLS_cat_20190122.fits,
+       dmu_products/dmu26/dmu26_XID+SPIRE_xFLS/data/dmu26_XID+SPIRE_xFLS_cat_20190123.fits ]
 
 photoz: None
 
