--- a/dmu32/dmu32_XMM-13hr/meta_main.yml
+++ b/dmu32/dmu32_XMM-13hr/meta_main.yml
@@ -12,7 +12,7 @@ flags: None
 
 xid: None
 
-photoz: None
+photoz: dmu_products/dmu24/dmu24_XMM-13hr/data/XMM-13hr_DESI-DR7_Zou_et_al_2019_photo_z_withhelp_id.fits
 
 cigale: None
 
