--- a/dmu32/dmu32_xFLS/meta_main.yml
+++ b/dmu32/dmu32_xFLS/meta_main.yml
@@ -15,8 +15,8 @@ xid: [ dmu_products/dmu26/dmu26_XID+MIPS_xFLS/data/dmu26_XID+MIPS_xFLS_cat_20190
 
 photoz: dmu_products/dmu24/dmu24_xFLS/data/xFLS_DESI-DR7_Zou_et_al_2019_photo_z_withhelp_id.fits
 
-cigale: None
+cigale: dmu_products/dmu28/dmu28_xFLS/data/zphot/HELP_final_results.fits
 
 cigale_ldust_prediction: None
 
-final: dmu_products/dmu32/dmu32_xFLS/data/xFLS_20180501_cigale.fits
+final: dmu_products/dmu32/dmu32_xFLS/data/xFLS.fits
