--- a/dmu26/dmu26_XID+SPIRE_SSDF/meta_main.yml
+++ b/dmu26/dmu26_XID+SPIRE_SSDF/meta_main.yml
@@ -2,9 +2,9 @@ Product: dmu26_XID+SPIRE_SSDF
 
 Version: 1.0
 
-Author: Peter Hurley
+Author: Maria Campos
 
-Fields: SGP
+Fields: SSSDF
 
 Selection filter: F_SPIRE_250, F_SPIRE_350, F_SPIRE_500
 
