--- a/dmu32/dmu32_HDF-N/meta_main.yml
+++ b/dmu32/dmu32_HDF-N/meta_main.yml
@@ -10,7 +10,7 @@ depths: dmu_products/dmu1/dmu1_ml_HDF-N/data/depths_hdf-n_20180427.fits
 
 flags: dmu_products/dmu6/dmu6_v_HDF-N/data/hdf-n_20180427_flags.fits
 
-xid: None
+xid: [ dmu_products/dmu26/dmu26_XID+SPIRE_HDF-N/data/dmu26_XID+SPIRE_HDF-N_cat_20191015.fits ]
 
 photoz: dmu_products/dmu24/dmu24_HDF-N/data/HDF-N_DESI-DR7_Zou_et_al_2019_photo_z_withhelp_id.fits
 
