update dmu26_ SA13_XMM-13hr_SSDF_HDFN

--- a/dmu26/dmu26_XID+SPIRE_HDF-N/meta_main.yml
+++ b/dmu26/dmu26_XID+SPIRE_HDF-N/meta_main.yml
@@ -12,4 +12,4 @@ Rights: N/A
 
 Acknowledgements: N/A
 
-Related products:  dmu26_XID+MIPS_HDF-N_cat_20190312.fits, HDF-N_SPIRE250_v1.0.fits, HDF-N_SPIRE350_v1.0.fits, HDF-N_SPIRE500_v1.0.fits
+Related products:  HDF-N_DESI-DR7_Zou_et_al_2019_photo_z_withhelp_id.fits, HDF-N_Ldust_prediction.fits, HDF-N_SPIRE250_v1.0.fits, HDF-N_SPIRE350_v1.0.fits, HDF-N_SPIRE500_v1.0.fits
