--- a/dmu32/dmu32_XMM-13hr/meta_main.yml
+++ b/dmu32/dmu32_XMM-13hr/meta_main.yml
@@ -10,7 +10,7 @@ depths: dmu_products/dmu1/dmu1_ml_XMM-13hr/data/depths_xmm-13hr_20180501.fits
 
 flags: None
 
-xid: None
+xid: [ dmu_products/dmu26/dmu26_XID+SPIRE_XMM-13hr/data/dmu26_XID+SPIRE_XMM-13hr_cat_20191025.fits ]
 
 photoz: dmu_products/dmu24/dmu24_XMM-13hr/data/XMM-13hr_DESI-DR7_Zou_et_al_2019_photo_z_withhelp_id.fits
 
