--- a/dmu32/dmu32_EGS/meta_main.yml
+++ b/dmu32/dmu32_EGS/meta_main.yml
@@ -10,7 +10,8 @@ depths: dmu_products/dmu1/dmu1_ml_EGS/data/depths_egs_20180406.fits
 
 flags: dmu_products/dmu6/dmu6_v_EGS/data/egs_20180501_flags.fits
 
-xid: [ dmu_products/dmu26/dmu26_XID+SPIRE_EGS/data/dmu26_XID+SPIRE_EGS_cat_20191007.fits ]
+xid: [ dmu_products/dmu26/dmu26_XID+PACS_EGS/data/dmu26_XID+PACS_EGS_cat_20191122.fits,
+       dmu_products/dmu26/dmu26_XID+SPIRE_EGS/data/dmu26_XID+SPIRE_EGS_cat_20191007.fits ]
 
 photoz: dmu_products/dmu24/dmu24_EGS/data/master_catalogue_egs_20180501_photoz_20180608.fits
 
