--- a/dmu32/dmu32_EGS/meta_main.yml
+++ b/dmu32/dmu32_EGS/meta_main.yml
@@ -15,6 +15,6 @@ xid: [ dmu_products/dmu26/dmu26_XID+PACS_EGS/data/dmu26_XID+PACS_EGS_cat_2019112
 
 photoz: dmu_products/dmu24/dmu24_EGS/data/master_catalogue_egs_20180501_photoz_20180608.fits
 
-cigale: None
+cigale: dmu_products/dmu28/dmu28_EGS/data/zphot/HELP_final_results.fits
 
 final: dmu_products/dmu32/dmu32_EGS/data/EGS_20180406_cigale.fits
