--- a/dmu26/dmu26_XID+SPIRE_Herschel-Stripe-82/meta_main.yml
+++ b/dmu26/dmu26_XID+SPIRE_Herschel-Stripe-82/meta_main.yml
@@ -12,4 +12,4 @@ Rights: N/A
 
 Acknowledgements: N/A
 
-Related products: HS82_SPIRE250_v1.0.fits, HS82_SPIRE350_v1.0.fits, HS82_SPIRE500_v1.0.fits, HS82_Ldust_prediction_results.fits
+Related products: Stripe82-PSWmap-mosaic_MS-20191207-nebulised, Stripe82-PMWmap-mosaic_MS-20191207-nebulised, Stripe82-PLWmap-mosaic_MS-20191207-nebulised, HS82_Ldust_prediction_results.fits
