--- a/dmu32/columns.yml
+++ b/dmu32/columns.yml
@@ -9777,33 +9777,33 @@ cigale_dustlumin_ironly_err:
   description: "Uncertainty on CIGALE_DustLumin_IRonly"
   ucd: stat.error;phys.dust;phys.luminosity
 
-flag_cigale: 
-  tablehead: Flag_CIGALE
-  type: smallint
+cigale_chi2_opt: 
+  tablehead: cigale_chi2_opt
+  type: double precision
   unit: None
-  description: "Flag qualifying the global fitting with CIGALE: 1 for a good fit, 0 for a bad fit, -1 if the source was not fitted."
-  ucd: meta.code.qual
+  description: "Reduced optical chi squared of best CIGALE fit to all data."
+  ucd: stat.fit.chi2
 
-flag_cigale_opt: 
-  tablehead: Flag_CIGALE_Opt
-  type: smallint
+cigale_chi2_ir: 
+  tablehead: cigale_chi2_ir
+  type: double precision
   unit: None
-  description: "Flag qualifying the fitting of the optical part of the spectrum during the global fit with CIGALE: 1 for a good fit, 0 for a bad fit, -1 if the source was not fitted."
-  ucd: meta.code.qual
+  description: "Reduced infrared chi squared of best CIGALE fit to all data."
+  ucd: stat.fit.chi2
 
-flag_cigale_ir: 
-  tablehead: Flag_CIGALE_IR
-  type: smallint
+cigale_chi2_red: 
+  tablehead: cigale_chi2_red
+  type: double precision
   unit: None
-  description: "Flag qualifying the fitting of the infra-red part of the spectrum during the global fit with CIGALE: 1 for a good fit, 0 for a bad fit, -1 if the source was not fitted."
-  ucd: meta.code.qual
+  description: "Reduced chi squared of best CIGALE fit."
+  ucd: stat.fit.chi2
 
-flag_cigale_ironly: 
-  tablehead: Flag_CIGALE_IRonly
-  type: smallint
+cigale_chi2_ironly: 
+  tablehead: cigale_chi2_ironly
+  type: double precision
   unit: None
-  description: "Flag qualifying the fitting using only infra-red data with CIGALE: 1 for a good fit, 0 for a bad fit, -1 if the source was not fitted."
-  ucd: meta.code.qual
+  description: "Reduced chi squared of best CIGALE fit to infrared data."
+  ucd: stat.fit.chi2
 
 flag_gaia: 
   tablehead: Flag_Gaia
