--- a/dmu32/dmu32_CDFS-SWIRE/meta_main.yml
+++ b/dmu32/dmu32_CDFS-SWIRE/meta_main.yml
@@ -10,7 +10,11 @@ depths: dmu_products/dmu1/dmu1_ml_CDFS-SWIRE/data/depths_cdfs-swire_20180221.fit
 
 flags: dmu_products/dmu6/dmu6_v_CDFS-SWIRE/data/cdfs-swire_20180221_flags.fits
 
-xid: [ dmu_products/dmu26/dmu26_XID+SPIRE_CDFS-SWIRE/data/dmu26_XID+SPIRE_CDFS-SWIRE_cat_20170919.fits, dmu_products/dmu26/dmu26_XID+MIPS_CDFS-SWIRE/data/dmu26_XID+MIPS_CDFS-SWIRE_cat_20170901.fits, dmu_products/dmu26/dmu26_XID+PACS_CDFS-SWIRE/data/dmu26_XID+PACS_CDFS-SWIRE_cat_20171019.fits ]
+xid: [ 
+    dmu_products/dmu26/dmu26_XID+MIPS_CDFS-SWIRE/data/dmu26_XID+MIPS_CDFS-SWIRE_cat_20201205.fits,     
+    dmu_products/dmu26/dmu26_XID+PACS_CDFS-SWIRE/data/dmu26_XID+PACS_CDFS-SWIRE_cat_20201210.fits, 
+    dmu_products/dmu26/dmu26_XID+SPIRE_CDFS-SWIRE/data/dmu26_XID+SPIRE_CDFS-SWIRE_cat_20201208.fits 
+]
 
 photoz: dmu_products/dmu24/dmu24_CDFS-SWIRE/data/master_catalogue_cdfs-swire_20171103_photoz_20180210.fits
 
