--- a/dmu26/dmu26_XID+SPIRE_CDFS-SWIRE/meta_main.yml
+++ b/dmu26/dmu26_XID+SPIRE_CDFS-SWIRE/meta_main.yml
@@ -1,8 +1,27 @@
+# Product: dmu26_XID+SPIRE_CDFS-SWIRE
+
+# Version: 1.0
+
+# Author: Peter Hurley
+
+# Fields: CDFS-SWIRE
+
+# Selection filter: F_SPIRE_250, F_SPIRE_350, F_SPIRE_500
+
+# Rights: N/A
+
+# Acknowledgements: N/A
+
+# Related products: CDFS-SWIRE-NEST_image_250_SMAP_v6.0.fits, CDFS-SWIRE-NEST_image_350_SMAP_v6.0.fits, CDFS-SWIRE-NEST_image_500_SMAP_v6.0.fits, dmu26_XID+MIPS_CDFS-SWIRE_cat_20170901.fits
+
+
+## New Masterlist
+
 Product: dmu26_XID+SPIRE_CDFS-SWIRE
 
 Version: 1.0
 
-Author: Peter Hurley
+Author: Maria Campos
 
 Fields: CDFS-SWIRE
 
@@ -12,4 +31,4 @@ Rights: N/A
 
 Acknowledgements: N/A
 
-Related products: CDFS-SWIRE-NEST_image_250_SMAP_v6.0.fits, CDFS-SWIRE-NEST_image_350_SMAP_v6.0.fits, CDFS-SWIRE-NEST_image_500_SMAP_v6.0.fits, dmu26_XID+MIPS_CDFS-SWIRE_cat_20170901.fits
+Related products: dmu26_XID+MIPS_CDFS-SWIRE_cat_20201205, CDFS-SWIRE_SPIRE250_v1.0.fits, CDFS-SWIRE_SPIRE500_v1.0.fits, CDFS-SWIRE_SPIRE500_v1.0.fits
